noinst_LTLIBRARIES = libamrwb.la
noinst_HEADERS = amr-wb.h
libamrwb_la_SOURCES = agc2.c autocorr.c az_isp.c basicop2.c bits.c \
c2t64fx.c c4t64fx.c cod_main.c convolve.c cor_h_x.c count.c d2t64fx.c \
d4t64fx.c decim54.c dec_main.c deemph.c d_gain2.c dtx.c gpclip.c \
g_pitch.c homing.c hp400.c hp50.c hp6k.c hp7k.c hp_wsp.c int_lpc.c \
isfextrp.c isp_az.c isp_isf.c lagconc.c lag_wind.c levinson.c log2.c \
lp_dec2.c math_op.c oper_32b.c ph_disp.c pitch_f4.c pit_shrp.c \
p_med_ol.c pred_lt4.c preemph.c q_gain2.c qisf_ns.c qpisf_2s.c q_pulse.c \
random.c residu.c scale.c syn_filt.c updt_tar.c util.c voicefac.c \
wb_vad.c weight_a.c acelp.h basic_op.h bits.h cnst.h cod_main.h count.h \
dec_main.h dtx.h log2.h log2_tab.h main.h math_op.h oper_32b.h p_med_o.h \
q_pulse.h typedef.h typedefs.h wb_vad_c.h wb_vad.h \
grid100.tab homing.tab lag_wind.tab p_med_ol.tab qisf_ns.tab \
ham_wind.tab isp_isf.tab mime_io.tab q_gain2.tab qpisf_2s.tab
